[package]
name = "i32_bfp"
version = "0.1.0"
authors = ["tobixdev <tobias.schwarzinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
dynasm = "1.1.0"
dynasmrt = "1.1.0"